--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unplugin-starter",
+  "name": "unplugin-images",
   "type": "module",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "packageManager": "pnpm@10.11.0",
   "description": "",
   "license": "MIT",
@@ -90,22 +90,24 @@
     }
   },
   "dependencies": {
-    "unplugin": "^2.3.4"
+    "chokidar": "^3.6.0",
+    "gradient-string": "^3.0.0",
+    "unplugin": "^2.3.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.13.2",
-    "@nuxt/kit": "^3.17.4",
-    "@nuxt/schema": "^3.17.4",
-    "@types/node": "^22.15.21",
-    "bumpp": "^10.1.1",
-    "eslint": "^9.27.0",
+    "@antfu/eslint-config": "^5.2.1",
+    "@nuxt/kit": "^4.0.3",
+    "@nuxt/schema": "^4.0.3",
+    "@types/node": "^24.2.1",
+    "bumpp": "^10.2.2",
+    "eslint": "^9.33.0",
     "nodemon": "^3.1.10",
-    "rollup": "^4.41.0",
-    "tsdown": "^0.12.0",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
-    "vitest": "^3.1.4",
-    "webpack": "^5.99.9"
+    "rollup": "^4.46.2",
+    "tsdown": "^0.14.1",
+    "tsx": "^4.20.3",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.1",
+    "vitest": "^3.2.4",
+    "webpack": "^5.101.0"
   }
 }
