--- a/package.json
+++ b/package.json
@@ -91,24 +91,24 @@
     }
   },
   "dependencies": {
-    "chokidar": "^3.6.0",
+    "chokidar": "^4.0.3",
     "gradient-string": "^3.0.0",
-    "unplugin": "^2.3.5"
+    "unplugin": "^2.3.8"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.1",
     "@nuxt/kit": "^4.0.3",
     "@nuxt/schema": "^4.0.3",
-    "@types/node": "^24.2.1",
-    "bumpp": "^10.2.2",
+    "@types/node": "^24.3.0",
+    "bumpp": "^10.2.3",
     "eslint": "^9.33.0",
     "nodemon": "^3.1.10",
-    "rollup": "^4.46.2",
+    "rollup": "4.46.4",
     "tsdown": "^0.14.1",
-    "tsx": "^4.20.3",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2",
-    "vite": "^7.1.1",
+    "vite": "^7.1.3",
     "vitest": "^3.2.4",
-    "webpack": "^5.101.0"
+    "webpack": "^5.101.3"
   }
 }
